# name: TestMTGIntegration.test_valid_url[https://aetherhub.com/Deck/test-796905]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://archidekt.com/decks/3380653#test]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://archidekt.com/decks/3380653/test]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://archidekt.com/decks/3380653]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://cubecobra.com/cube/overview/2fj4]
  Counter({
    'Brainstorm': 4,
    'Delver of Secrets': 1,
    'Past in Flames': 3,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://decks.tcgplayer.com/magic/standard/mpc-autofill/test/1398367]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://deckstats.net/decks/216625/2754468-test]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://magic-ville.com/fr/decks/showdeck?ref=948045]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://manastack.com/deck/test-426]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://scryfall.com/@mpcautofill/decks/71bb2d40-c922-4a01-a63e-7ba2dde29a5c]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://tappedout.net/mtg-decks/09-10-22-DoY-test]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://www.moxfield.com/decks/D42-or9pCk-uMi4XzRDziQ]
  Counter({
    '1 Delver of Secrets // Insectile Aberration': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
    't:Innistrad Checklist': 1,
  })
# ---
# name: TestMTGIntegration.test_valid_url[https://www.mtggoldfish.com/deck/5149750]
  Counter({
    '1 Delver of Secrets': 1,
    '3 Past in Flames': 1,
    '4 Brainstorm': 1,
  })
# ---
